<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout_root"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:background="@color/green"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageButton
                    android:id="@+id/imagebtn_menu"
                    android:src="@drawable/unfocused"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>
                <TextView
                    android:textColor="@color/white"
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"/>
                <ImageButton
                    android:id="@+id/imagebtn_add"
                    android:src="@drawable/unfocused"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/green"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/text_navigation_tab1"
                    android:text="@string/all_all"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/text_navigation_tab2"
                    android:text="@string/all_anniversary"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/text_navigation_tab3"
                    android:text="@string/all_work"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/text_navigation_tab4"
                    android:text="@string/all_life"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp">
                <View
                    android:background="@color/green"
                    android:id="@+id/view_navigation_tag1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>
                <View
                    android:background="@color/green"
                    android:id="@+id/view_navigation_tag2"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>
                <View
                    android:background="@color/green"
                    android:id="@+id/view_navigation_tag3"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>
                <View
                    android:background="@color/green"
                    android:id="@+id/view_navigation_tag4"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/framelayout_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/list_menu"
        android:layout_height="match_parent"
        android:layout_width="300dp"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:background="@color/green"/>
</android.support.v4.widget.DrawerLayout>
